fix: lint configuration and add best practices
- Change lint script to only fail on errors (not warnings)
- Add noDocumentCookie rule as warning
- Create .agents/BEST-PRACTICES.md with pre-commit checklist
- Update CLAUDE.md to reference .agents/ documentation

--- a/biome.json
+++ b/biome.json
@@ -51,7 +51,8 @@
         "noExplicitAny": "warn",
         "noArrayIndexKey": "warn",
         "noImplicitAnyLet": "warn",
-        "useIterableCallbackReturn": "warn"
+        "useIterableCallbackReturn": "warn",
+        "noDocumentCookie": "warn"
       }
     }
   },
