--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "bun scripts/core/run-cross.ts \"bun run --filter @cadhy/desktop tauri build\"",
     "build:web": "bun run --filter @cadhy/web build",
     "tauri": "bun run --filter @cadhy/desktop tauri",
-    "lint": "biome check .",
+    "lint": "biome check --diagnostic-level=error .",
+    "lint:strict": "biome check .",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
     "typecheck": "bun run --filter '*' typecheck",
