fix: disable husky in CI workflows
Husky postinstall fails on Windows. Added HUSKY=0 env var to all
bun install steps in CI and release workflows.

--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -58,6 +58,8 @@ jobs:
 
       - name: Install Dependencies
         run: bun install --frozen-lockfile
+        env:
+          HUSKY: 0
 
       - name: Build App
         shell: powershell
@@ -130,6 +132,8 @@ jobs:
 
       - name: Install Dependencies
         run: bun install --frozen-lockfile
+        env:
+          HUSKY: 0
 
       - name: Import Apple Certificate
         env:
@@ -221,6 +225,8 @@ jobs:
 
       - name: Install Dependencies
         run: bun install --frozen-lockfile
+        env:
+          HUSKY: 0
 
       - name: Build App
         env:
