feat: web production deployment to cadhy.app
- Deploy landing page to Vercel with custom domain cadhy.app
- Add SEO: sitemap.xml, robots.txt, manifest.json, JSON-LD schemas
- Enhanced meta tags for Open Graph and Twitter cards
- Remove GitHub Pages workflows (deploy-web.yml, release.yml)
- Enable Tauri signing keys in release-app.yml for auto-updater
- Update branding to 'Computer-Aided Design for HYdraulics'
- Expand CHANGELOG with complete backend feature documentation
- Improve mobile navbar with top sheet design
- Add Vercel configuration and ignore files

--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -88,9 +88,9 @@ jobs:
           OCCT_ROOT: ${{ github.workspace }}\deps\occt-${{ env.OCCT_VERSION }}
           DEP_OCCT_ROOT: ${{ github.workspace }}\deps\occt-${{ env.OCCT_VERSION }}
           CASROOT: ${{ github.workspace }}\deps\occt-${{ env.OCCT_VERSION }}
-          # Signing disabled for now - enable when keys are properly configured
-          # TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
-          # TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+          # Tauri signing keys for auto-updater
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
           WINDOWS_CERTIFICATE: ${{ secrets.WINDOWS_CERTIFICATE }}
           WINDOWS_CERTIFICATE_PASSWORD: ${{ secrets.WINDOWS_CERTIFICATE_PASSWORD }}
         run: .\scripts\dev\run-with-occt.ps1 "bun run --filter @cadhy/desktop tauri:build"
@@ -198,14 +198,15 @@ jobs:
 
       - name: Build App
         env:
-          # Signing disabled for now - enable when keys are properly configured
-          # TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
-          # TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+          # Tauri signing keys for auto-updater
+          TAURI_SIGNING_PRIVATE_KEY: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY }}
+          TAURI_SIGNING_PRIVATE_KEY_PASSWORD: ${{ secrets.TAURI_SIGNING_PRIVATE_KEY_PASSWORD }}
+          # Apple code signing
           APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
-          # Notarization disabled - re-enable when Apple credentials are verified
-          # APPLE_ID: ${{ secrets.APPLE_ID }}
-          # APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
-          # APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
+          # Apple notarization (optional - enable when Apple credentials are verified)
+          APPLE_ID: ${{ secrets.APPLE_ID }}
+          APPLE_PASSWORD: ${{ secrets.APPLE_PASSWORD }}
+          APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
         run: bun run --filter @cadhy/desktop tauri:build:macos -- --target ${{ matrix.target }}
 
       - name: Get version
