--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -251,7 +251,7 @@ jobs:
     runs-on: ubuntu-latest
     if: |
       always() &&
-      startsWith(github.ref, 'refs/tags/v') &&
+      (startsWith(github.ref, 'refs/tags/v') || github.event_name == 'workflow_dispatch') &&
       github.event.inputs.dry_run != 'true' &&
       (needs.build-macos.result == 'success' || needs.build-windows.result == 'success')
     permissions:
