fix: add proper Vercel ignore script for monorepo
Uses VERCEL_GIT_PREVIOUS_SHA for reliable change detection.
Only builds when apps/web or packages/ui change.

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "outputDirectory": "apps/web/dist",
   "installCommand": "bun install",
   "framework": "vite",
+  "ignoreCommand": "bash scripts/vercel-ignore.sh",
   "rewrites": [
     {
       "source": "/((?!assets/|hero/|favicon|logo|sitemap|robots|manifest).*)",
