--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "outputDirectory": "apps/web/dist",
   "installCommand": "bun install",
   "framework": "vite",
-  "ignoreCommand": "bash scripts/vercel-ignore.sh",
+  "ignoreCommand": "npx turbo-ignore @cadhy/web",
   "rewrites": [
     {
       "source": "/((?!assets/|hero/|favicon|logo|sitemap|robots|manifest).*)",
