--- a/.github/workflows/release-app.yml
+++ b/.github/workflows/release-app.yml
@@ -188,6 +188,11 @@ jobs:
         env:
           HUSKY: 0
 
+      - name: Copy OCCT dylibs for bundling
+        run: |
+          chmod +x scripts/occt/copy-dylibs-macos.sh
+          ./scripts/occt/copy-dylibs-macos.sh
+
       - name: Import Apple Certificate
         env:
           APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
