--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,15 +14,16 @@
     "@cadhy/ui": "workspace:*",
     "@hugeicons/core-free-icons": "^2.0.0",
     "@hugeicons/react": "^1.1.1",
-    "motion": "^12.1.1",
     "@mdx-js/mdx": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@mdx-js/rollup": "^3.1.1",
     "@shikijs/rehype": "^3.19.0",
     "@tailwindcss/typography": "^0.5.19",
+    "@vercel/speed-insights": "^1.3.1",
     "clsx": "^2.1.1",
     "fumadocs-core": "^16.2.5",
     "fumadocs-mdx": "^14.1.0",
+    "motion": "^12.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.1.1",
