feat(web): dynamic changelog from GitHub releases + fix lint paths
- Changelog section now fetches releases from GitHub API
- Added loading skeleton while fetching
- Parses markdown body to extract summary
- Shows placeholder cards when < 4 releases

Also fixes CI:
- biome.json: ignore .bun cache directory
- package.json: lint commands target apps/packages, not root

--- a/biome.json
+++ b/biome.json
@@ -10,6 +10,7 @@
     "includes": [
       "**",
       "!**/node_modules",
+      "!**/.bun",
       "!**/dist",
       "!**/build",
       "!**/.tauri",
