--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "build": "bun scripts/core/run-cross.ts \"bun run --filter @cadhy/desktop tauri build\"",
     "build:web": "bun run --filter @cadhy/web build",
     "tauri": "bun run --filter @cadhy/desktop tauri",
-    "lint": "biome check --diagnostic-level=error .",
-    "lint:strict": "biome check .",
-    "lint:fix": "biome check --write .",
-    "format": "biome format --write .",
+    "lint": "biome check --diagnostic-level=error apps packages",
+    "lint:strict": "biome check apps packages",
+    "lint:fix": "biome check --write apps packages",
+    "format": "biome format --write apps packages",
     "typecheck": "bun run --filter '*' typecheck",
     "test": "bun run --filter '*' test",
     "test:desktop": "bun run --filter @cadhy/desktop test",
